--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -10,22 +10,22 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-09 Thu 06:12]
+#+CAPTION: Clock summary at [2019-05-09 Thu 06:34]
 | <75>                                                       |         |       |      |       |
 | Headline                                                   | Time    |       |      |     % |
 |------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                               | *18:40* |       |      | 100.0 |
+| *Total time*                                               | *19:00* |       |      | 100.0 |
 |------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                    | 18:40   |       |      | 100.0 |
-| Active                                                     |         | 18:40 |      | 100.0 |
-| Edit release notes for previous sprint                     |         |       | 2:41 |  14.4 |
-| Create a video demo for the previous sprint's features     |         |       | 2:11 |  11.7 |
-| Sprint and product backlog grooming                        |         |       | 0:19 |   1.7 |
-| Defining profiles directly on a target model does not work |         |       | 0:30 |   2.7 |
-| Inner modules need to be qualified                         |         |       | 0:22 |   2.0 |
-| Create namespaces for model elements                       |         |       | 8:59 |  48.1 |
-| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   8.3 |
-| Code generate feature infrastructure                       |         |       | 2:05 |  11.2 |
+| Stories                                                    | 19:00   |       |      | 100.0 |
+| Active                                                     |         | 19:00 |      | 100.0 |
+| Edit release notes for previous sprint                     |         |       | 2:41 |  14.1 |
+| Create a video demo for the previous sprint's features     |         |       | 2:11 |  11.5 |
+| Sprint and product backlog grooming                        |         |       | 0:28 |   2.5 |
+| Defining profiles directly on a target model does not work |         |       | 0:30 |   2.6 |
+| Inner modules need to be qualified                         |         |       | 0:22 |   1.9 |
+| Create namespaces for model elements                       |         |       | 8:59 |  47.3 |
+| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   8.2 |
+| Code generate feature infrastructure                       |         |       | 2:16 |  11.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -164,6 +164,7 @@ Time spent creating the demo.
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-05-09 Thu 06:25]--[2019-05-09 Thu 06:34] =>  0:09
     CLOCK: [2019-05-06 Mon 08:50]--[2019-05-06 Mon 09:09] =>  0:19
     :END:
 
@@ -245,26 +246,9 @@ when generating the visitor: we were splitting them by internal
 modules, resulting in multiple visitors per model. We now bucket them
 by model instead.
 
-*** Investigate use of =is_element_type= in stereotypes               :story:
-
-We seem to only be considering a subset of the elements when doing the
-stereotype transform, yet its all working. Need to figure out why, and
-if this is no longer required, remove this method.
-
-*** Read variability papers                                           :story:
-
-Time spent reading the literature on variability.
-
-*** Emacs maintenance and exploration work                            :story:
-
-Any time spent improving emacs, exploring new modes, fixing snags, etc.
-
-*** Fix issues with nightly build and CI                              :story:
-
-Time spent fixing build issues with either nightlies and/or CI.
-
 *** STARTED Code generate feature infrastructure                      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-09 Thu 06:13]--[2019-05-09 Thu 06:24] =>  0:11
     CLOCK: [2019-05-08 Wed 19:07]--[2019-05-08 Wed 19:27] =>  0:20
     CLOCK: [2019-05-08 Wed 09:27]--[2019-05-08 Wed 09:31] =>  0:04
     CLOCK: [2019-05-07 Tue 16:54]--[2019-05-07 Tue 18:01] =>  1:07
@@ -289,6 +273,18 @@ Problems:
   property.
 
 : #DOGEN masd.variability.binding_point=global
+
+*** Read variability papers                                           :story:
+
+Time spent reading the literature on variability.
+
+*** Emacs maintenance and exploration work                            :story:
+
+Any time spent improving emacs, exploring new modes, fixing snags, etc.
+
+*** Fix issues with nightly build and CI                              :story:
+
+Time spent fixing build issues with either nightlies and/or CI.
 
 *** Move parent processing to injection                               :story:
 
