--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -10,22 +10,22 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-09 Thu 06:34]
+#+CAPTION: Clock summary at [2019-05-09 Thu 07:06]
 | <75>                                                       |         |       |      |       |
 | Headline                                                   | Time    |       |      |     % |
 |------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                               | *19:00* |       |      | 100.0 |
+| *Total time*                                               | *19:30* |       |      | 100.0 |
 |------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                    | 19:00   |       |      | 100.0 |
-| Active                                                     |         | 19:00 |      | 100.0 |
-| Edit release notes for previous sprint                     |         |       | 2:41 |  14.1 |
-| Create a video demo for the previous sprint's features     |         |       | 2:11 |  11.5 |
-| Sprint and product backlog grooming                        |         |       | 0:28 |   2.5 |
+| Stories                                                    | 19:30   |       |      | 100.0 |
+| Active                                                     |         | 19:30 |      | 100.0 |
+| Edit release notes for previous sprint                     |         |       | 2:41 |  13.8 |
+| Create a video demo for the previous sprint's features     |         |       | 2:11 |  11.2 |
+| Sprint and product backlog grooming                        |         |       | 0:28 |   2.4 |
 | Defining profiles directly on a target model does not work |         |       | 0:30 |   2.6 |
 | Inner modules need to be qualified                         |         |       | 0:22 |   1.9 |
-| Create namespaces for model elements                       |         |       | 8:59 |  47.3 |
-| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   8.2 |
-| Code generate feature infrastructure                       |         |       | 2:16 |  11.9 |
+| Create namespaces for model elements                       |         |       | 8:59 |  46.1 |
+| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   7.9 |
+| Code generate feature infrastructure                       |         |       | 2:46 |  14.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -248,6 +248,8 @@ by model instead.
 
 *** STARTED Code generate feature infrastructure                      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-09 Thu 07:04]--[2019-05-09 Thu 07:06] =>  0:02
+    CLOCK: [2019-05-09 Thu 06:35]--[2019-05-09 Thu 07:03] =>  0:28
     CLOCK: [2019-05-09 Thu 06:13]--[2019-05-09 Thu 06:24] =>  0:11
     CLOCK: [2019-05-08 Wed 19:07]--[2019-05-08 Wed 19:27] =>  0:20
     CLOCK: [2019-05-08 Wed 09:27]--[2019-05-08 Wed 09:31] =>  0:04
