--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -10,22 +10,23 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-09 Thu 07:06]
+#+CAPTION: Clock summary at [2019-05-09 Thu 11:55]
 | <75>                                                       |         |       |      |       |
 | Headline                                                   | Time    |       |      |     % |
 |------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                               | *19:30* |       |      | 100.0 |
+| *Total time*                                               | *22:45* |       |      | 100.0 |
 |------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                    | 19:30   |       |      | 100.0 |
-| Active                                                     |         | 19:30 |      | 100.0 |
-| Edit release notes for previous sprint                     |         |       | 2:41 |  13.8 |
-| Create a video demo for the previous sprint's features     |         |       | 2:11 |  11.2 |
-| Sprint and product backlog grooming                        |         |       | 0:28 |   2.4 |
-| Defining profiles directly on a target model does not work |         |       | 0:30 |   2.6 |
-| Inner modules need to be qualified                         |         |       | 0:22 |   1.9 |
-| Create namespaces for model elements                       |         |       | 8:59 |  46.1 |
-| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   7.9 |
-| Code generate feature infrastructure                       |         |       | 2:46 |  14.2 |
+| Stories                                                    | 22:45   |       |      | 100.0 |
+| Active                                                     |         | 22:45 |      | 100.0 |
+| Edit release notes for previous sprint                     |         |       | 2:41 |  11.8 |
+| Create a video demo for the previous sprint's features     |         |       | 2:11 |   9.6 |
+| Sprint and product backlog grooming                        |         |       | 0:28 |   2.1 |
+| Defining profiles directly on a target model does not work |         |       | 0:30 |   2.2 |
+| Inner modules need to be qualified                         |         |       | 0:22 |   1.6 |
+| Create namespaces for model elements                       |         |       | 8:59 |  39.5 |
+| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   6.8 |
+| Code generate feature infrastructure                       |         |       | 3:10 |  13.9 |
+| Try to add relational tracing support                      |         |       | 2:51 |  12.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -248,6 +249,7 @@ by model instead.
 
 *** STARTED Code generate feature infrastructure                      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-09 Thu 08:38]--[2019-05-09 Thu 09:02] =>  0:59
     CLOCK: [2019-05-09 Thu 07:04]--[2019-05-09 Thu 07:06] =>  0:02
     CLOCK: [2019-05-09 Thu 06:35]--[2019-05-09 Thu 07:03] =>  0:28
     CLOCK: [2019-05-09 Thu 06:13]--[2019-05-09 Thu 06:24] =>  0:11
@@ -275,6 +277,72 @@ Problems:
   property.
 
 : #DOGEN masd.variability.binding_point=global
+
+*** POSTPONED Try to add relational tracing support                   :story:
+    CLOSED: [2019-05-09 Thu 11:55]
+    :LOGBOOK:
+    CLOCK: [2019-05-09 Thu 11:48]--[2019-05-09 Thu 11:55] =>  0:07
+    CLOCK: [2019-05-09 Thu 09:03]--[2019-05-09 Thu 11:47] =>  2:44
+    :END:
+
+Whenever we bump into a problem we seem to spend a lot of time going
+through the log files and trace files trying to figure out where the
+problem is happening. Have a quick go in trying to implement a
+relational model for tracing to see if we can transfer the bulk of the
+data into a relational format which we can query via SQL.
+
+We've created a basic relational model for tracing. The relational
+part of it seems straightforward (ish); the problem is the integration
+of the tracer with the relational model. At present we rely on the
+fact that all traceable objects have IO enabled; this works because
+the code generator creates the IO facet, which is then used by the
+write method in utility to convert any model type into a
+string. However, we now need to change the approach: we need multiple
+tracing backends:
+
+- file tracer
+- database tracer.
+
+The file tracer is more or less the current tracer. The database
+tracer needs to decompose the objects in existing models into a
+relational representation. In an ideal world, the user would configure
+the tracer to use one of the two backends and the remaining usage
+would be transparent. However, we cannot have an interface for the
+tracer backend that uses template methods because then we'd need
+virtual template functions, it seems.
+
+Another alternative is to make the tracer aware of the model objects
+it is tracing. This is also not ideal because we would create cycles
+int he design.
+
+In effect we need to somehow implement a similar approach to the existing
+tracer: rely on global template functions a-la =operator<<= to
+decompose objects into their relational representations and then
+supply those to the backend. It is not very clear how this would
+work. For now we've postponed this approach as it seems its not going
+to be a quick win.
+
+*** Consider adding stereotypes into profiles                         :story:
+
+It would be nice to be able to define a profile called "ormable" and
+then have it enable:
+
+- types
+- ODB
+- the appropriate ORM stereotype, e.g. =orm::object=, etc.
+
+However, at present there is no way to associate a stereotype with a profile.
+
+*** Add type mapping support to primitives                            :story:
+
+At present we can setup a type map in ORM as follows:
+
+: #DOGEN masd.orm.type_override=postgresql,JSONB
+
+However, this is specific to attributes. It would be really nice to
+have this at the primitive level as well so that we can map once and
+reuse the mapping.
+
 
 *** Read variability papers                                           :story:
 
