--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -10,24 +10,24 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-09 Thu 17:33]
+#+CAPTION: Clock summary at [2019-05-10 Fri 10:23]
 | <75>                                                       |         |       |      |       |
 | Headline                                                   | Time    |       |      |     % |
 |------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                               | *25:09* |       |      | 100.0 |
+| *Total time*                                               | *27:19* |       |      | 100.0 |
 |------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                    | 25:09   |       |      | 100.0 |
-| Active                                                     |         | 25:09 |      | 100.0 |
-| Edit release notes for previous sprint                     |         |       | 2:41 |  10.7 |
-| Create a video demo for the previous sprint's features     |         |       | 2:11 |   8.7 |
-| Sprint and product backlog grooming                        |         |       | 0:28 |   1.9 |
-| Defining profiles directly on a target model does not work |         |       | 0:30 |   2.0 |
-| Inner modules need to be qualified                         |         |       | 0:22 |   1.5 |
-| Create namespaces for model elements                       |         |       | 8:59 |  35.7 |
-| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   6.2 |
-| Try to add relational tracing support                      |         |       | 2:51 |  11.3 |
-| Linux and OSX binaries are not stripped                    |         |       | 1:23 |   5.5 |
-| Code generate feature infrastructure                       |         |       | 4:11 |  16.6 |
+| Stories                                                    | 27:19   |       |      | 100.0 |
+| Active                                                     |         | 27:19 |      | 100.0 |
+| Edit release notes for previous sprint                     |         |       | 2:41 |   9.8 |
+| Create a video demo for the previous sprint's features     |         |       | 2:11 |   8.0 |
+| Sprint and product backlog grooming                        |         |       | 0:28 |   1.7 |
+| Defining profiles directly on a target model does not work |         |       | 0:30 |   1.8 |
+| Inner modules need to be qualified                         |         |       | 0:22 |   1.3 |
+| Create namespaces for model elements                       |         |       | 8:59 |  32.9 |
+| Leaves in internal modules are not captured correctly      |         |       | 1:33 |   5.7 |
+| Try to add relational tracing support                      |         |       | 2:51 |  10.4 |
+| Linux and OSX binaries are not stripped                    |         |       | 1:23 |   5.1 |
+| Code generate feature infrastructure                       |         |       | 6:21 |  23.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -340,6 +340,10 @@ Links:
 
 *** STARTED Code generate feature infrastructure                      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-10 Fri 10:16]--[2019-05-10 Fri 10:23] =>  0:07
+    CLOCK: [2019-05-10 Fri 09:29]--[2019-05-10 Fri 10:15] =>  0:46
+    CLOCK: [2019-05-10 Fri 09:05]--[2019-05-10 Fri 09:29] =>  0:24
+    CLOCK: [2019-05-09 Thu 17:21]--[2019-05-09 Thu 18:14] =>  0:53
     CLOCK: [2019-05-09 Thu 13:59]--[2019-05-09 Thu 14:25] =>  0:26
     CLOCK: [2019-05-09 Thu 13:10]--[2019-05-09 Thu 13:45] =>  0:35
     CLOCK: [2019-05-09 Thu 08:38]--[2019-05-09 Thu 09:02] =>  0:59
@@ -496,6 +500,12 @@ based builder for element that takes care of these:
 - hide name factory inside of builder.
 - to determine the builder API, see all use cases where we are
   manually creating the element.
+- populate the origin type. At present we are doing this on a
+  transform but the problem is we keep forgetting on adding new
+  meta-model types to it. Ideally we just want the types to be
+  populated straight on adaption. We just need a flag to be supplied
+  to the injection to coding transform (is target?), if we don't have
+  one already.
 
 *** Enablement problem is in the variability domain                   :story:
 
